# mcp-financial-analyst

./: .gitignore  README.md  cloudflared.yml  finance_crew.py  indonesia_stock_analysis.py  pyproject.toml  requirements.txt  server.py  setup_tunnel.sh  start_tunnel.sh  start_uv_tunnel.sh  stock_analysis.py
